changed to post

--- a/annotador-web/src/main/webapp/WEB-INF/web.xml
+++ b/annotador-web/src/main/webapp/WEB-INF/web.xml
@@ -4,8 +4,16 @@
         <servlet-name>annotate2</servlet-name>
         <servlet-class>oeg.core.tagger.servlets.annotateDoc</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>annotate</servlet-name>
+        <servlet-class>oeg.core.tagger.servlets.annotatePost</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>annotate2</servlet-name>
         <url-pattern>/annotate2</url-pattern>
+    </servlet-mapping>
+        <servlet-mapping>
+        <servlet-name>annotate</servlet-name>
+        <url-pattern>/annotate</url-pattern>
     </servlet-mapping>
 </web-app>
