--- a/annotador-core/pom.xml
+++ b/annotador-core/pom.xml
@@ -7,13 +7,25 @@
         <version>1.0</version>
     </parent>
     
-	<groupId>oeg.tagger</groupId>
+    <groupId>oeg.tagger</groupId>
     <artifactId>annotador-core</artifactId>
     <version>1.0</version>
 	
     <packaging>jar</packaging>
     
-<dependencies>
+    <dependencies>
+        <!-- Added to manage the rules using lucene-->
+        <dependency>        
+            <groupId>org.apache.lucene</groupId>          
+            <artifactId>lucene-core</artifactId>
+            <version>7.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queryparser</artifactId>
+            <version>7.1.0</version>
+        </dependency>
+
         <!--dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -91,10 +103,10 @@
         </dependency>
         
         <dependency>
-  <groupId>org.slf4j</groupId>
-  <artifactId>slf4j-simple</artifactId>
-  <version>1.7.21</version>
-</dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.21</version>
+        </dependency>
         
         <!-- https://mvnrepository.com/artifact/edu.stanford.nlp/stanford-corenlp -->
         <dependency>
@@ -123,10 +135,10 @@
             <classifier>models-spanish</classifier>
         </dependency>
         <dependency>
-  <groupId>org.apache.maven</groupId>
-  <artifactId>maven-model</artifactId>
-  <version>3.3.9</version>
-</dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-model</artifactId>
+            <version>3.3.9</version>
+        </dependency>
     </dependencies>
     
     
