--- a/annotador-core/pom.xml
+++ b/annotador-core/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>lucene-queryparser</artifactId>
             <version>7.1.0</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
 
         <!--dependency>
             <groupId>ch.qos.logback</groupId>
