--- a/annotador-core/pom.xml
+++ b/annotador-core/pom.xml
@@ -145,6 +145,16 @@
             <artifactId>maven-model</artifactId>
             <version>3.3.9</version>
         </dependency>
+        <dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.11-beta2</version>
+	</dependency>
+	 <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi</artifactId>
+        <version>3.11-beta2</version>
+    </dependency>
     </dependencies>
     
     
