--- a/annotador-core/pom.xml
+++ b/annotador-core/pom.xml
@@ -80,11 +80,11 @@
           <version>1.1.1</version>
         </dependency> -->
         
-        <dependency>
+        <!--dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
