--- a/annotador-rest/pom.xml
+++ b/annotador-rest/pom.xml
@@ -8,8 +8,8 @@
     <version>0.1.0</version>
 
     <!-- choose this for a war version 
-    <packaging>war</packaging> 
-    -->
+    <packaging>war</packaging> -->
+    
 
     <properties>
         <java.version>1.8</java.version>
@@ -32,8 +32,8 @@
                 <type>pom</type>
             </dependency>   
         </dependencies>
-    </dependencyManagement> 
-    -->    
+    </dependencyManagement> --> 
+       
 
     <dependencies>
 
@@ -58,19 +58,25 @@
             <version>1.11</version>
         </dependency>
 
-        <!-- Esto es para generar swagger-->
+        <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>1.4.3</version>
+   </dependency>
+
+        <!-- Esto es para generar swagger
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>2.7.0</version>
-        </dependency>        
+        </dependency>        -->
         
-        <!-- Esto es para que el swagger se vea bonito-->
+        <!-- Esto es para que el swagger se vea bonito
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.7.0</version>
-        </dependency>        
+        </dependency>       -->        
         <!-- esto es para incluir autorizaciones -->
         <dependency>             
             <groupId>org.springframework.boot</groupId>             
@@ -85,7 +91,13 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.0</version>
-        </dependency-->        
+        </dependency-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>2.0.1.RELEASE</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
 
