--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,14 @@
 		<module>annotador-rest</module>
 		<module>annotador-web</module>
   </modules>
+    <dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
